--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
 		}
 	],
 	"require": {
-		"php": "^8.1"
+		"php": "^8.1",
+		"contributte/monolog": "^0.5.2",
+		"mangoweb/monolog-tracy-handler": "^1.1",
+		"psr/log": "^2.0 || ^3.0"
 	},
 	"autoload": {
 		"psr-4": {
