--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
 		"php": "^8.1",
 		"contributte/monolog": "^0.5.2",
 		"mangoweb/monolog-tracy-handler": "^1.1",
-		"psr/log": "^2.0 || ^3.0"
+		"psr/log": "^2.0 || ^3.0",
+		"nette/di": "^3.2",
+		"nette/schema": "^1.0",
+		"nette/php-generator": "^3.0 || ^4.0"
 	},
 	"autoload": {
 		"psr-4": {
