--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,3 +2,6 @@ includes:
 	- vendor/phpstan/phpstan-strict-rules/rules.neon
 	- vendor/phpstan/phpstan-phpunit/extension.neon
 	- vendor/phpstan/phpstan-phpunit/rules.neon
+
+parameters:
+	checkExplicitMixed: false
