--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
 		"php": "^8.1",
 		"contributte/monolog": "^0.5.2",
 		"mangoweb/monolog-tracy-handler": "^1.1",
-		"psr/log": "^2.0 || ^3.0",
+		"monolog/monolog": "^3.6",
 		"nette/di": "^3.2",
-		"nette/schema": "^1.0",
 		"nette/php-generator": "^3.0 || ^4.0",
-		"monolog/monolog": "^3.0"
+		"nette/schema": "^1.0",
+		"psr/log": "^2.0 || ^3.0"
 	},
 	"autoload": {
 		"psr-4": {
@@ -65,6 +65,7 @@
 		]
 	},
 	"config": {
+		"sort-packages": true,
 		"allow-plugins": {
 			"dealerdirect/phpcodesniffer-composer-installer": true
 		}
