Allow contributte extension configuration

--- a/src/DI/monolog.neon
+++ b/src/DI/monolog.neon
@@ -12,3 +12,7 @@ channel:
 		processors:
 			- Mangoweb\MonologTracyHandler\TracyProcessor()
 			- Monolog\Processor\WebProcessor()
+holder:
+	enabled: %holderEnabled%
+manager:
+	enabled: %managerEnabled%
