--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,13 @@
 	"require": {
 		"php": "^8.1",
 		"contributte/monolog": "^0.5.2",
+		"lcobucci/jwt": "^5.0",
 		"mangoweb/monolog-tracy-handler": "^1.1",
 		"monolog/monolog": "^3.6",
 		"nette/di": "^3.2",
 		"nette/php-generator": "^3.0 || ^4.0",
 		"nette/schema": "^1.0",
+		"psr/http-message": "^1.0 || ^2.0",
 		"psr/log": "^2.0 || ^3.0"
 	},
 	"autoload": {
