--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
 		"nette/php-generator": "^3.0 || ^4.0",
 		"nette/schema": "^1.0",
 		"psr/http-message": "^1.0 || ^2.0",
-		"psr/log": "^2.0 || ^3.0"
+		"psr/log": "^2.0 || ^3.0",
+		"ramsey/uuid": "^4.7"
 	},
 	"autoload": {
 		"psr-4": {
