--- a/src/DI/monolog.neon
+++ b/src/DI/monolog.neon
@@ -12,6 +12,7 @@ channel:
 		processors:
 			- Mangoweb\MonologTracyHandler\TracyProcessor(Apploud\Logger\Tracy\LocalStorageDriver(%logDirUrl%))
 			- Monolog\Processor\WebProcessor()
+			- Apploud\Logger\Processor\UuidProcessor()
 holder:
 	enabled: %holderEnabled%
 manager:
